fix(banner): z-index vs side-menu on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
+#main-banner {
+  z-index: 399;
+}
+
 .mode-wrapper {
  display: flex;
  flex-direction: column;
